--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -2,25 +2,32 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
 }
 
 .homepage__box {
   flex: 1;
   padding: 2rem;
   line-height: 2.5rem;
+  box-sizing: border-box;
 }
 
 
 .homepage__img {
+  flex: 1;
   width: 100%;
-  height: auto;
-  object-fit: cover;
+  height: 500px;
+  background-image: url('/images/IMG_6494.jpg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 @media (max-width: 768px) {
   .homepage__container {
     display: block;
     text-align: center;
+    overflow: visible;
   }
 
   .homepage__box {
@@ -29,6 +36,9 @@
 
   .homepage__img {
     width: 100%;
-    height: auto;
+    background-attachment: scroll;
+    min-height: 500px;
+    background-size: cover;
+    background-position: center;
   }
 }
