--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -56,7 +56,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     text-align: center;
     padding: 1rem 0;
 
