--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,13 @@
 @import 'base/settings';
 @import 'base/base';
 @import 'components/header';
+@import 'components/footer';
+@import 'components/socials';
 @import 'components/navigation';
 @import 'components/masonrygallery';
 @import 'components/container';
 @import 'components/homepage';
+@import 'components/contactpage';
+@import 'components/servicespage';
 @import 'components/blogposts';
 
