--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -8,7 +8,6 @@
 .homepage__box {
   flex: 1;
   padding: 2rem;
-  line-height: 2.5rem;
   box-sizing: border-box;
 }
 
@@ -21,6 +20,7 @@
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 0.8rem;
 }
 
 @media (max-width: 768px) {
