--- a/src/styles/components/_contactpage.scss
+++ b/src/styles/components/_contactpage.scss
@@ -55,6 +55,7 @@
   border-radius: .5rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-top: 1rem;
 }
 
 .contactpage__error {
