--- a/src/styles/components/_servicespage.scss
+++ b/src/styles/components/_servicespage.scss
@@ -49,13 +49,27 @@
   flex-direction: column;
 }
 
+.servicedetails__contact-btn {
+  background-color: $green;
+  transition: background-color 0.3s, transform 0.3s;
+  border: none;
+  color: white;
+  border-radius: .8rem;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+.servicedetails__contact-btn:hover {
+  font-weight: bold;
+}
+
 .servicedetails__items {
   list-style: none;
   padding: 0;
 }
 
 .servicedetails__item {
-  margin: .5rem 0;
+  margin: 1rem 0;
 }
 
 .servicedetails__deliverables {
@@ -66,6 +80,10 @@
   display: flex;
   align-items: center;
   margin: 1rem 0;
+}
+
+.servicedetails__calltoaction {
+  text-align: center;
 }
 
 .servicedetails__icon {
