Added Pet Photographer Service - Modified pricing

--- a/src/styles/components/_servicespage.scss
+++ b/src/styles/components/_servicespage.scss
@@ -1,6 +1,7 @@
-.servicepages__container {
+.servicespage__container {
   display: flex;
   flex-direction: column;
+  padding-top: 5rem;
 }
 
 .servicedetails__container {
